Bug/GUI: :bug: Fixed the label of the user not showing correctly on device screen
Used as !important inline style of the element.

--- a/assets/css/components/headline/home page/courses-sm.css
+++ b/assets/css/components/headline/home page/courses-sm.css
@@ -24,6 +24,16 @@
     padding-top: 11px;
   }
 
+  .label-user {
+    top: 62%;
+    left: -2%;
+    width: 22vw;
+    height: 60%;
+    font-weight: bold;
+    font-size: 3.5vw;
+    padding: 10px;
+  }
+
   .main-grid-container__course__headline > img:nth-child(1) {
     display: none;
     position: absolute;
